--- a/style.css
+++ b/style.css
@@ -7,3 +7,34 @@ h1 {
     font-size: 25px;
     color: red;
 }
+
+.grid {
+    display: grid;
+    grid-template: 100px 200px 100px/ 100px 100px;
+    justify-content: center;
+    gap: 10px;
+
+}
+
+.a {
+    grid-area: 1 / 1 / span 1 /span 2;
+    border: 1px solid black;
+}
+
+.b {
+    grid-area: 2 / 1 / span 1 /span 2;
+    border: 1px solid black;
+
+}
+
+.c {
+    grid-area: 2 / 2 / span 1 /span 1;
+    border: 1px solid black;
+
+}
+
+.d {
+    grid-area: 3 / 1 / span 1 /span 2;
+    border: 1px solid black;
+
+}
